BUG#12162 - one can start two transactions with the same XID. Now we keep all active XID's in a hash